--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     "api/breakdown.js": {
       "memory": 256,
       "maxDuration": 10
+    },
+    "api/market-mood.js": {
+      "memory": 256,
+      "maxDuration": 10
     }
   },
   "headers": [
