--- a/.github/workflows/americas-morning.yml
+++ b/.github/workflows/americas-morning.yml
@@ -34,3 +34,6 @@ jobs:
           git add content/
           git diff --staged --quiet || git commit -m "📰 americas morning brief - $(date -u +%Y-%m-%d)"
           git push
+
+      - name: Trigger Vercel Deploy
+        run: curl -X POST "https://api.vercel.com/v1/integrations/deploy/prj_13sdaqbpH8QogAy6zy3Y4OvAgqUq/MdENtkMTX9"
