--- a/.github/workflows/americas-morning.yml
+++ b/.github/workflows/americas-morning.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Generate Americas morning brief
         env:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+          UNSPLASH_ACCESS_KEY: ${{ secrets.UNSPLASH_ACCESS_KEY }}
         run: python scripts/generate_brief.py americas morning
       
       - name: Commit and push
