--- a/.github/workflows/emea-evening.yml
+++ b/.github/workflows/emea-evening.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Generate EMEA evening brief
         env:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+          UNSPLASH_ACCESS_KEY: ${{ secrets.UNSPLASH_ACCESS_KEY }}
         run: python scripts/generate_brief.py emea evening
       
       - name: Commit and push
