--- a/.github/workflows/week-ahead.yml
+++ b/.github/workflows/week-ahead.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Generate Week Ahead
         env:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+          UNSPLASH_ACCESS_KEY: ${{ secrets.UNSPLASH_ACCESS_KEY }}
         run: |
           python scripts/generate_brief.py global week-ahead
       
